@@ -54,12 +54,15 @@ module Spec
         def render(options=nil, deprecated_status=nil, &block)
           unless block_given?
             unless integrate_views?
-              @template.stub!(:file_exists?).and_return(true)
-              @template.should_receive(:render_template).any_number_of_times.and_return(true) { |*args|
-                @first_render ||= args[2]
-              }
-              @template.stub!(:find_template_extension_for).and_return("rhtml")
-              @template.stub!(:read_template_file).and_return("this is fake content generated by rspec")
+              @template.metaclass.class_eval do
+                define_method :file_exists? do true end
+                define_method :find_template_extension_for do "erb" end
+                define_method :read_template_file do "this is fake content generated by rspec" end
+                define_method :render_template do |*args|
+                  @first_render ||= args[2]
+                  true
+                end
+              end
             end
           end
           response.controller_path = controller_path
