@@ -1,6 +1,7 @@
 == Version 1.0.3
 Bug fixes.
 
+* Fixed [#11075] controller specs fail when using mocha without integrated_views
 * Fixed problem with redirect_to failing incorrectly against edge rails.
 * Fixed [#11082] RspecResourceGenerator should be RspecScaffoldGenerator
 * Fixed [#10959] Focused Examples do not work for Behaviour defined with constant with modules
